# rakurai_programs

./: .gitignore  Anchor.toml  Cargo.toml  README.md  anchor.md
cli/: Cargo.toml  READEME.md  README.md
cli/src/: clap_args.rs  lib.rs
programs/block_reward_distribution/: Cargo.toml
programs/block_reward_distribution/src/: lib.rs  state.rs
programs/block_reward_distribution/src/sdk/: instruction.rs  mod.rs
programs/multisig/: Cargo.toml
programs/multisig/src/: lib.rs  state.rs
programs/multisig/src/sdk/: instruction.rs  mod.rs
programs/rakurai_activation/: Cargo.toml  README.md
programs/rakurai_activation/idl/: rakurai_activation.json
programs/rakurai_activation/src/: lib.rs  state.rs
programs/rakurai_activation/src/sdk/: instruction.rs  mod.rs
programs/reward_distribution/: Cargo.toml  README.md
programs/reward_distribution/idl/: reward_distribution.json
programs/reward_distribution/src/: lib.rs  state.rs
programs/reward_distribution/src/sdk/: instruction.rs  mod.rs
programs/vote_state/: Cargo.toml
scripts/: localnet.sh
tests/: Cargo.toml
tests/src/: block_reward_distributor.rs  lib.rs  test_initialize.rs
