[package]
name = "rakurai_cli"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-lang = { path = "../../anchor/lang" }
bincode = "1.3.3"
bs58 = "0.5.1"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
rakurai_activation = { path = "../programs/rakurai_activation" }
serde = "1.0.138"
serde_derive = "1.0.103"
serde_json = "1.0.140"
shellexpand = "3.1.0"
solana-rpc-client = { path = "../../rpc-client" }
solana-sdk = { path = "../../solana-sdk/sdk" }

[[bin]]
name = "rakurai-activation"
path = "src/bin/rakurai_activation_cli.rs"
