[package]
name = "rakurai_cli"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-lang = { path = "../../anchor/lang" }
bincode = {workspace = true}
bs58 = {workspace = true}
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
rakurai_activation = { path = "../programs/rakurai_activation" }
serde = {workspace = true}
serde_derive = {workspace = true}
serde_json = {workspace = true}
shellexpand = "3.1.0"
solana-rpc-client = {workspace = true}
solana-sdk = {workspace = true}

[[bin]]
name = "rakurai-activation"
path = "src/bin/rakurai_activation_cli.rs"
