[package]
name = "block_reward_distribution"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "block_reward_distribution"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = { path = "../../../../anchor/lang" }
default-env = "0.1.1"
jito-programs-vote-state = { path = "../vote-state" }
solana-program = { path = "../../../../sdk/program" }
solana-security-txt = "1.1.1"