[package]
name = "block_reward_distribution"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "block_reward_distribution"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = "0.30.1"
default-env = "0.1.1"
solana-program = "1.18.22"
solana-security-txt = "1.1.1"
bincode = "1.3.3"