[package]
name = "multisig"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "multisig"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []

[dependencies]
default-env = "0.1.1"
solana-program = "2.1.11"
solana-security-txt = "1.1.1"
rakurai-vote-state = { path = "../vote_state" }
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "8b391aa278387b6f6ce3133453619a175544631e" }