[package]
description = "Solana program to distribute block rewards among Rakurai, validator, and stakers. Staker rewards accumulate in a collection account and are distributed post-epoch proportionally based on stake using Merkle root."
edition = "2021"
name = "reward_distribution"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "reward_distribution"

[features]
anchor-debug = []
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "8b391aa278387b6f6ce3133453619a175544631e" }
rakurai-vote-state = { path = "../vote_state" }
solana-program = "2.1.21"
solana-security-txt = "1.1.1"
