[package]
name = "rakurai-vote-state"
version = "0.1.0"
edition = "2021"
description = "Created with Anchor"

[dependencies]
bincode = "1.3.3"
serde = "1.0.138"
serde_derive = "1.0.103"
solana-program = "2.1.11"
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "8b391aa278387b6f6ce3133453619a175544631e" }
