[package]
name = "rakurai-vote-state"
version = "0.1.0"
edition = "2021"
description = "Created with Anchor"

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "8b391aa278387b6f6ce3133453619a175544631e" }
bincode = "1.3.3"
serde = "1.0.213"
serde_derive = "1.0.213"
solana-program = "2.1.21"
